test/scc/decl/semantic-errors/025.t
struct A
{
    extern void foo();
};